--- a/variablexercise.html
+++ b/variablexercise.html
@@ -7,7 +7,17 @@
 </head>
 <body>
     <script>
-        
+        //  const name = 'prabesh';
+     // console.log(`My name is: ${name}`);
+
+        const cost = 5 + 2 * 3 + 9;
+      console.log(`Cost of food: $${cost}`);
+
+      const tax = cost * 0.1;
+      console.log(`Tax (10%): $${tax}`);
+
+      const totalCost = cost + tax;
+      console.log(`Total cost: $${totalCost}`);
     </script>
     
 </body>
