--- a/to-do-list.html
+++ b/to-do-list.html
@@ -8,7 +8,7 @@
         <button>Add</button>
         
         <P>Todo List Practice 2</P>
-        <input placeholder="Todo name">
+        <input placeholder="kei lekh bhai">
         <button>Add</button>
 
     
