not completed yet

--- a/to-do-list.html
+++ b/to-do-list.html
@@ -3,14 +3,20 @@
     <title>ToDO list</title>
     <body>
         <script src="to-do-list.js"> </script>
-        <p>Todo List Practice 1</p>
-        <input placeholder="Todo name">
-        <button>Add</button>
-        
-        <P>Todo List Practice 2</P>
-        <input placeholder="kei lekh bhai">
-        <button>Add</button>
+       <p>Todo List</p>
 
-    
-    </body>
-</head>
+    <div class="todo-input-grid">
+      <input placeholder="Todo name"
+        class="js-name-input name-input">
+      <input type="date"
+        class="js-due-date-input due-date-input">
+      <button onclick="
+        addTodo();
+      " class="add-todo-button">Add</button>
+    </div>
+
+    <div class="js-todo-list todo-grid"></div>
+
+    <script src="scripts/11-todo-list.js"></script>
+  </body>
+</html>
